--- a/package.json
+++ b/package.json
@@ -1,32 +1,47 @@
 {
-  "name": "note-app",
-  "version": "0.0.0",
+  "name": "notes-app",
+  "version": "1.0.0",
+  "description": "NoteApp",
+  "main": "karma.conf.js",
   "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "private": true,
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Thisisnarayan/Notes-App.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Thisisnarayan/Notes-App/issues"
+  },
+  "homepage": "https://github.com/Thisisnarayan/Notes-App#readme",
   "dependencies": {
-    "@angular/animations": "~10.0.0",
-    "@angular/common": "~10.0.0",
-    "@angular/compiler": "~10.0.0",
-    "@angular/core": "~10.0.0",
-    "@angular/forms": "~10.0.0",
-    "@angular/platform-browser": "~10.0.0",
-    "@angular/platform-browser-dynamic": "~10.0.0",
-    "@angular/router": "~10.0.0",
+    "@angular-devkit/core": "9.1.0-next.4",
+    "@angular/animations": "^9.0.7",
+    "@angular/cdk": "8.2.3",
+    "@angular/cli": "^9.1.0-next.4",
+    "@angular/common": "9.0.7",
+    "@angular/compiler": "9.0.7",
+    "@angular/core": "9.0.7",
+    "@angular/flex-layout": "^9.0.0-beta.29",
+    "@angular/forms": "9.0.7",
+    "@angular/localize": "^9.0.7",
+    "@angular/material": "^8.2.3",
+    "@angular/platform-browser": "9.0.7",
+    "@angular/platform-browser-dynamic": "9.0.7",
+    "@angular/router": "9.0.7",
+    "@angular/service-worker": "9.0.7",
+    "ngx-quill": "^12.0.1",
+    "quill": "^1.3.7",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1000.0",
-    "@angular/cli": "~10.0.0",
-    "@angular/compiler-cli": "~10.0.0",
+    "@angular-devkit/build-angular": "~0.901.0-next.4",
+    "@angular/compiler-cli": "9.0.7",
+    "@angular/language-service": "9.0.7",
     "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
@@ -41,6 +56,6 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~3.9.5"
+    "typescript": "^3.7.5"
   }
 }
